--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,4 +1,5 @@
 * {
+    font-family: 'JetBrains Mono Nerd Font';
 }
 
 window#waybar {
@@ -10,10 +11,11 @@ window#waybar {
 }
 
 #workspaces {
-    margin: 5px 1px 6px 1px;
-    padding: 0px 1px;
+    background: #1A1B26;
+    margin: 5px;
+    padding: 0px 5px;
     border-radius: 15px;
-    border: 0px;
+    border: 3px solid #2C3043;
     font-weight: bold;
     font-style: normal;
     font-size: 16px;
@@ -24,13 +26,13 @@ window#waybar {
     margin: 4px 3px;
     border-radius: 15px;
     border: 0px;
-    color: @textcolor3;
+    background: #2C3043;
     transition: all 0.3s ease-in-out;
 }
 
 #workspaces button.active {
-    color: #A663E7;
     background: #2C3043;
+    color: #A663E7;
     border-radius: 15px;
     min-width: 40px;
     transition: all 0.3s ease-in-out;
@@ -44,8 +46,8 @@ window#waybar {
 
 #taskbar {
     background: #1A1B26;
-    margin: 6px 15px 6px 0px;
-    padding:0px;
+    margin: 5px;
+    padding: 0px;
     border-radius: 15px;
     border: 3px solid #2C3043;
     font-style: normal;
@@ -53,49 +55,63 @@ window#waybar {
 }
 
 #taskbar button {
-    margin:0;
+    margin: 0;
     border-radius: 15px;
-    padding: 0px 5px 0px 5px;
+    padding: 0px 5px 0px;
 }
 
 #clock {
-    color: #A663E7;
+    color: #FFFFFF;
     background: #1A1B26;
-    margin: 5px 5px 5px 5px;
+    margin: 5px;
     padding: 4px 10px;
     border-radius: 15px;
     border: 3px solid #2C3043;
-    font-weight: normal;
+    font-size: 15px;
 }
 
 #pulseaudio {
-    color: #A663E7;
+    color: #FFFFFF;
     background: #1A1B26;
-    margin: 5px 5px 5px 5px;
+    margin: 5px;
     padding: 4px 10px;
     border-radius: 15px;
     border: 3px solid #2C3043;
-    font-weight: normal;
+    font-size: 14px;
 }
 
 #tray {
     background: #1A1B26;
-    margin: 5px 5px 5px 5px;
+    margin: 5px;
     padding: 4px 10px;
     border-radius: 15px;
     border: 3px solid #2C3043;
 }
 
 #custom-power {
-    margin: 5px 5px 5px 5px;
-    padding: 3px 10px;
+    margin: 5px;
+    padding: 0px 12px 0px 8px;
     background: #1A1B26;
-    border-radius: 300px;
+    border-radius: 15px;
+    border: 3px solid #2C3043;
+    font-size: 15px;
+    color: #FFFFFF;
+}
+
+#custom-power:hover {
+    background: #2C3043;
+}
+
+#custom-appmenu {
+    margin: 5px;
+    padding: 0px 12px 0px 8px;
+    background: #1A1B26;
+    border-radius: 15px;
     border: 3px solid #2C3043;
     font-size: 20px;
     color: #FFFFFF;
 }
 
-#custom-power:hover {
+#custom-appmenu:hover {
     background: #2C3043;
 }
