--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -115,3 +115,17 @@ window#waybar {
 #custom-appmenu:hover {
     background: #2C3043;
 }
+
+#custom-notifications {
+    margin: 5px;
+    padding: 0px 12px 0px 8px;
+    background: #1A1B26;
+    border-radius: 15px;
+    border: 3px solid #2C3043;
+    font-size: 15px;
+    color: #FFFFFF;
+}
+
+#custom-notifications:hover {
+    background: #2C3043;
+}
